--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="main">
 
     <nav><ul>
-      <li><img src={{site-url}}"/img/mu-logo-black.png" alt="Logo" style="height: 65px; vertical-align: middle;"/></li>
+      <li><img src={{site-url}}"/img/mu-logo-black.jpg" alt="Logo" style="height: 65px; vertical-align: middle;"/></li>
       {% for node in site.posts reversed %}
         {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
         <li class="p-{{id}}"><a href="#{{id}}">{{node.title}}</a></li>
